cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project("viewCloud")
set(PCL_DIR "/usr/local/share/pcl-1.7/PCLConfig.cmake")
set(BIN_NAME "viewCloud")
find_package(PCL 1.7 REQUIRED COMPONENTS io common surface registration filters kdtree visualization)

include_directories(/usr/include/eigen3)
include_directories(/usr/include/openni/)
include_directories(/usr/local/include/pcl-1.7/)
add_definitions(${PCL_DEFINITIONS})

add_executable (${BIN_NAME} src/main.cpp)
target_link_libraries (${BIN_NAME} ${PCL_LIBRARIES})
target_link_libraries(${BIN_NAME} OpenNI)
target_link_libraries(${BIN_NAME} ${PCL_IO_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_VISUALIZATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_REGISTRATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_COMMON_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_KDTREE_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_SURFACE_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_3D_REC_FRAMEWORK_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_APPS_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_OUTOFCORE_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_SEARCH_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_FEATURES_LIBRARIES})

